--- a/.env.local
+++ b/.env.local
@@ -1,3 +1,8 @@
-NEXT_PUBLIC_EMAILJS_PUBLIC_KEY=fN-_U-7Bu0HMYWeaw
-NEXT_PUBLIC_EMAILJS_SERVICE_ID=service_ti87dh9
-NEXT_PUBLIC_EMAILJS_TEMPLATE_ID=template_18ik2gr
+# SMTP settings for server-side email (Gmail)
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_SECURE=false
+SMTP_USER=samadhandmanjare@gmail.com
+SMTP_PASS=xbqx uwav aqzt cqnz
+SMTP_FROM=Samadhan Portfolio <noreply@yourdomain.com>
+TO_EMAIL=samadhandmanjare@gmail.com
