--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next-themes": "^0.4.3",
     "nextjs-toploader": "^3.7.15",
     "node-fetch": "^3.3.2",
+    "nodemailer": "^7.0.10",
     "open": "^10.1.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
