--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^5.14.5",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "postcss": "^8",
